--- a/app/src/main/resources/macha/main.fxml
+++ b/app/src/main/resources/macha/main.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.BorderPane?>
@@ -10,6 +11,21 @@
 <BorderPane xmlns="http://javafx.com/javafx/21"
             xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="macha.ui.MainController">
+
+    <top>
+        <HBox spacing="8">
+            <padding>
+                <Insets top="10" right="10" bottom="10" left="10"/>
+            </padding>
+            <Label text="Host:"/>
+            <TextField fx:id="hostField" prefWidth="170" promptText="127.0.0.1"/>
+            <Label text="Port:"/>
+            <TextField fx:id="portField" prefWidth="80" promptText="45455"/>
+
+            <Button text="Start Host" onAction="#onStartHost"/>
+            <Button text="Connect" onAction="#onConnect"/>
+        </HBox>
+    </top>
 
     <center>
         <ListView fx:id="messagesList"/>
